# elm-basic-compile

./: .gitignore  Makefile  README.md  cabal.config  elm-basic-compile.cabal  export.js  index.html  index.js  package.json  test.js
js/: browser-driver.js  btest.js  elm-compiler-interface.js  elm-package.js  elm-static.js  export.js  github-source.js  node-test.js  package-version.js  prelude.js
patch/: elm-compiler.diff  elm-package.diff
src/: Compiler.hs  JSInterface.hs  JSTypes.hs  Linker.hs  Main.hs  Types.hs
src/Data/List/: Utils.hs
src/Data/String/: Utils.hs
src/Utils/: File.hs  Misc.hs
tests/: compile-package.js  compile-project.js  elm-package-json.js  elm-package-source.js  link-program.js  logic-solver.js  parse-code.js  parse-failure.js
