Name: elm-basic-compile
Version: 0.18

Synopsis:
    A demonstration tool for running the compiler in javascript.
Description:
    Builds elm modules in javascript given json definitions of needed
    info from other modules.

Homepage:
    http://elm-lang.org

License: BSD3
License-file: LICENSE

Author:     Art Yerkes (hacked from elm-make)
Maintainer: info@elm-lang.org
Copyright:  Copyright (c) 2014 Evan Czaplicki

Category: Build Tool

Build-type: Simple
Cabal-version: >=1.9

Extra-source-files: README.md

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-make.git

Executable elm-basic-compile

    ghc-options:
        -threaded -O2 -W

    hs-source-dirs:
        src

    Main-is:
        Main.hs

    other-modules:

    Build-depends:
        aeson,
        ansi-terminal,
        ansi-wl-pprint,
        base >=4.2 && <5,
        base64-bytestring,
        binary,
        blaze-html,
        blaze-markup,
        bytestring,
        containers >= 0.3,
        directory,
        elm-compiler == 0.18,
        elm-package == 0.18,
        elm-make == 0.18,
        filepath,
        ghcjs-base,
        ghcjs-prim,
        mtl >= 2.2.1 && < 3,
        optparse-applicative >=0.11 && <0.12,
        raw-strings-qq,
        time,
        text
